--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
     <body>
         <div class="container">
             <h1>Kopert's Game List</h1>
+            <div class="social-strip">
+                <a href="https://twitch.tv/kopert" target="_blank" rel="noopener" aria-label="Twitch">
+                    <img src="/twitch.png" alt="Twitch" class="social-icon" />
+                </a>
+                <a href="https://discord.gg/XJwdBdQZ8B" target="_blank" rel="noopener" aria-label="Discord">
+                    <img src="/discord.png" alt="Discord" class="social-icon" />
+                </a>
+                <a href="https://www.youtube.com/@KopertGaming" target="_blank" rel="noopener" aria-label="YouTube">
+                    <img src="/youtube.png" alt="YouTube" class="social-icon" />
+                </a>
+            </div>
             <div class="panels-grid">
                 <section class="panel">
                     <h2>Currently Being Played</h2>
