Make gamelist content fully static in production

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div class="panels-grid">
                 <section class="panel">
                     <h2>Currently Being Played</h2>
-                    <div class="game-list" id="ongoing"></div>
+                    <div class="game-list"><!-- ongoing --></div>
                 </section>
                 <section class="panel">
                     <h2>Retrospectives Finished</h2>
-                    <div class="game-list" id="retrospectives"></div>
+                    <div class="game-list"><!-- retrospectives --></div>
                 </section>
                 <section class="panel panel-no-list">
                     <p>
@@ -58,15 +58,15 @@
                 </section>
                 <section class="panel panel-wide">
                     <h2>Games Finished</h2>
-                    <div class="game-list" id="finished"></div>
+                    <div class="game-list"><!-- finished --></div>
                 </section>
                 <section class="panel">
                     <h2>Dropped Due to Crashing</h2>
-                    <div class="game-list" id="dropped-crashing"></div>
+                    <div class="game-list"><!-- droppedCrashing --></div>
                 </section>
                 <section class="panel">
                     <h2>Dropped Due to Utter Bullshit</h2>
-                    <div class="game-list" id="dropped-bullshit"></div>
+                    <div class="game-list"><!-- droppedBullshit --></div>
                 </section>
             </div>
             <footer class="copyright">Copyright © 2026 Kopert. All rights reserved.</footer>
