--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <div class="game-list"><!-- droppedCrashing --></div>
                 </section>
                 <section class="panel">
-                    <h2>Dropped Due to Utter Bullshit</h2>
-                    <div class="game-list"><!-- droppedBullshit --></div>
+                    <h2>Given Up</h2>
+                    <div class="game-list"><!-- givenUp --></div>
                 </section>
             </div>
             <footer class="copyright">Copyright © 2026 Kopert. All rights reserved.</footer>
