--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
         <title>Kopert</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-            rel="stylesheet"
-        />
         <script type="module" src="src/main.ts"></script>
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
@@ -20,7 +14,7 @@
     <body>
         <div class="container">
             <header class="title-block">
-                <div class="logo-circle"><img src="/logo.jpg" alt="Kopert logo" class="logo-img" /></div>
+                <div class="logo-container"><div role="img" aria-label="Kopert logo" class="logo-svg"></div></div>
                 <div>
                     <h1>Kopert</h1>
                     <div class="tagline">Games used to be good. They still are, but they used to be, too.</div>
@@ -28,13 +22,13 @@
             </header>
             <nav class="social-strip" aria-label="Social links">
                 <a href="https://twitch.tv/kopert" target="_blank">
-                    <img src="/twitch.png" alt="Twitch channel" class="social-icon" />
+                    <div role="img" aria-label="Twitch channel" class="social-icon twitch-svg"></div>
                 </a>
                 <a href="https://discord.gg/XJwdBdQZ8B" target="_blank">
-                    <img src="/discord.png" alt="Discord server" class="social-icon" />
+                    <div role="img" aria-label="Discord server" class="social-icon discord-svg"></div>
                 </a>
                 <a href="https://www.youtube.com/@KopertGaming" target="_blank">
-                    <img src="/youtube.png" alt="YouTube VOD Archives channel" class="social-icon" />
+                    <div role="img" aria-label="YouTube VOD Archives channel" class="social-icon youtube-svg"></div>
                 </a>
             </nav>
             <div class="panels-grid">
