Adjust homepage panels and add special streams section

--- a/index.html
+++ b/index.html
@@ -32,29 +32,21 @@
                 </a>
             </nav>
             <div class="panels-grid">
-                <section class="panel">
+                <section class="panel panel-wide">
                     <h2>Currently Being Played</h2>
                     <div class="game-list"><!-- ongoing --></div>
+                </section>
+                <section class="panel panel-wide">
+                    <h2>Games Finished</h2>
+                    <div class="game-list"><!-- finished --></div>
                 </section>
                 <section class="panel">
                     <h2>Retrospectives Finished</h2>
                     <div class="game-list"><!-- retrospectives --></div>
                 </section>
-                <section class="panel panel-no-list">
-                    <p>
-                        <a href="https://youtube.com/playlist?list=PL6RaiovQ8kYuArUMx-5-AT02jTBXmDSIQ"
-                            >Special Streams</a
-                        >
-                    </p>
-                </section>
-                <section class="panel panel-no-list">
-                    <p>
-                        <a href="https://www.youtube.com/@KopertGaming">YouTube VOD Archives</a>
-                    </p>
-                </section>
-                <section class="panel panel-wide">
-                    <h2>Games Finished</h2>
-                    <div class="game-list"><!-- finished --></div>
+                <section class="panel">
+                    <h2>Special Streams</h2>
+                    <div class="game-list"><!-- specialStreams --></div>
                 </section>
                 <section class="panel">
                     <h2>Dropped Due to Crashing</h2>
