Move logo styling from css to svg

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="container">
             <header class="title-block">
-                <div class="logo-container"><div role="img" aria-label="Kopert logo" class="logo-svg"></div></div>
+                <div role="img" aria-label="Kopert logo" class="logo-svg"></div>
                 <div>
                     <h1>Kopert</h1>
                     <div class="tagline">Games used to be good. They still are, but they used to be, too.</div>
